--- a/package.json
+++ b/package.json
@@ -47,12 +47,13 @@
     "@types/jsonwebtoken": "^7.2.0",
     "@types/node": "~6.0.60",
     "@types/uuid": "^2.0.29",
-    "ask-sdk": "^2.0.7",
     "alexa-verifier": "2.0.1",
+    "ask-sdk": "^2.0.7",
     "body-parser": "~1.17.1",
     "compression": "^1.6.2",
     "cookie-parser": "~1.3.5",
     "core-js": "^2.4.1",
+    "dotenv": "^6.0.0",
     "express": "^4.15.2",
     "express-jwt": "^5.1.0",
     "jsonwebtoken": "^7.3.0",
