--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "ngrx-store-freeze": "^0.2.0",
     "normalize.css": "^5.0.0",
     "path": "^0.12.7",
+    "pug": "^2.0.3",
     "rxjs": "^5.4.2",
     "ts-helpers": "^1.1.2",
     "ts-node": "~3.3.0",
