--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "normalize.css": "^5.0.0",
     "path": "^0.12.7",
     "pug": "^2.0.3",
+    "request": "^2.87.0",
+    "request-promise-native": "^1.0.5",
     "rxjs": "^5.4.2",
     "ts-helpers": "^1.1.2",
     "ts-node": "~3.3.0",
