--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "^1.6.0",
-    "@angular/common": "^5.1.0",
-    "@angular/compiler": "^5.1.0",
-    "@angular/compiler-cli": "^5.1.0",
-    "@angular/core": "^5.1.0",
-    "@angular/forms": "^5.1.0",
-    "@angular/http": "^5.1.0",
-    "@angular/language-service": "^5.1.0",
-    "@angular/platform-browser": "^5.1.0",
-    "@angular/platform-browser-dynamic": "^5.1.0",
-    "@angular/router": "^5.1.0",
+    "@angular/animations": "^6.1.1",
+    "@angular/cli": "^6.1.2",
+    "@angular/common": "^6.1.1",
+    "@angular/compiler": "^6.1.1",
+    "@angular/core": "^6.1.1",
+    "@angular/forms": "^6.1.1",
+    "@angular/http": "^6.1.1",
+    "@angular/platform-browser": "^6.1.1",
+    "@angular/platform-browser-dynamic": "^6.1.1",
+    "@angular/platform-server": "^6.1.1",
+    "@angular/router": "^6.1.1",
     "@ngrx/effects": "^4.1.1",
     "@ngrx/store": "^4.1.1",
     "@ngrx/store-devtools": "^4.1.1",
@@ -43,19 +43,17 @@
     "@types/compression": "^0.0.33",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.35",
-    "@types/jasmine": "2.5.38",
     "@types/jsonwebtoken": "^7.2.0",
-    "@types/node": "~6.0.60",
     "@types/uuid": "^2.0.29",
     "alexa-verifier": "2.0.1",
     "ask-sdk": "^2.0.7",
-    "body-parser": "~1.17.1",
-    "compression": "^1.6.2",
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
     "cookie-parser": "~1.3.5",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.7",
     "dotenv": "^6.0.0",
-    "express": "^4.15.2",
-    "express-jwt": "^5.1.0",
+    "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^5.2.5",
     "ngrx-store-freeze": "^0.2.0",
@@ -64,28 +62,35 @@
     "pug": "^2.0.3",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
-    "rxjs": "^5.4.2",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.2.2",
     "ts-helpers": "^1.1.2",
     "ts-node": "~3.3.0",
-    "tslint": "^5.8.0",
-    "typescript": "~2.4.0",
     "uuid": "^3.0.1",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "codelyzer": "~4.0.1",
+    "@angular-devkit/build-angular": "^0.7.2",
+    "@angular/compiler-cli": "^6.1.1",
+    "@angular/language-service": "^5.2.11",
+    "@types/jasmine": "^2.8.8",
+    "@types/node": "^10.5.7",
+    "codelyzer": "^4.4.3",
     "concurrently": "^3.5.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.5.0",
-    "karma-chrome-launcher": "~2.0.0",
-    "karma-cli": "~1.0.1",
+    "jasmine-core": "^3.1.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^2.0.5",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^1.0.1",
     "karma-coverage-istanbul-reporter": "^0.2.0",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "nodemon": "^1.11.0",
-    "protractor": "~5.1.0",
+    "karma-jasmine": "^1.1.2",
+    "karma-jasmine-html-reporter": "^1.2.0",
+    "karma-remap-istanbul": "^0.6.0",
+    "nodemon": "^1.18.3",
+    "protractor": "^5.4.0",
+    "rxjs-tslint": "^0.1.5",
+    "tslint": "^5.11.0",
+    "typescript": "^2.7.2",
     "webdriver-manager": "10.2.5"
   }
 }
