--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/platform-browser-dynamic": "^6.1.1",
     "@angular/platform-server": "^6.1.1",
     "@angular/router": "^6.1.1",
+    "@auth0/angular-jwt": "^2.0.0",
     "@ngrx/effects": "^4.1.1",
     "@ngrx/store": "^4.1.1",
     "@ngrx/store-devtools": "^4.1.1",
