--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@types/uuid": "^2.0.29",
     "alexa-verifier": "2.0.1",
     "ask-sdk": "^2.0.7",
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "cookie-parser": "~1.3.5",
@@ -55,16 +57,20 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
-    "jsonwebtoken": "^7.3.0",
-    "mongoose": "^5.2.5",
+    "jsonwebtoken": "^7.4.3",
+    "mongoose": "^5.2.9",
+    "morgan": "^1.9.0",
     "ngrx-store-freeze": "^0.2.0",
     "normalize.css": "^5.0.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
     "pug": "^2.0.3",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
+    "serve-favicon": "^2.5.0",
     "ts-helpers": "^1.1.2",
     "ts-node": "~3.3.0",
     "uuid": "^3.0.1",
