--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/uuid": "^2.0.29",
     "alexa-verifier": "2.0.1",
     "ask-sdk": "^2.0.7",
+    "bcrypt": "^3.0.0",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
