--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.35",
     "@types/jsonwebtoken": "^7.2.0",
+    "@types/oauth2-server": "^3.0.8",
     "@types/uuid": "^2.0.29",
     "alexa-verifier": "2.0.1",
     "ask-sdk": "^2.0.7",
@@ -63,6 +64,7 @@
     "morgan": "^1.9.0",
     "ngrx-store-freeze": "^0.2.0",
     "normalize.css": "^5.0.0",
+    "oauth2-server": "^3.0.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
