--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "compression": "^1.7.3",
     "cookie-parser": "~1.3.5",
     "core-js": "^2.5.7",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
