update auth model

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGODB_URI=mongodb://fthornton67:Raspberry_2018@phitr-us-mgdb-001-shard-00-00-k2uhz.mongodb.net:27017,phitr-us-mgdb-001-shard-00-01-k2uhz.mongodb.net:27017,phitr-us-mgdb-001-shard-00-02-k2uhz.mongodb.net:27017/phitrus-bot?ssl=true&replicaSet=phitr-us-mgdb-001-shard-0&authSource=admin
 SECRET_TOKEN=319e2c1e-f955-4735-9377-59bab302d5bb
-
+environment=development
