--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "server/app.js",
   "license": "MIT",
   "scripts": {
-    "start": "concurrently --kill-others \"npm run server:run\" \"ng serve --aot --progress=false --proxy-config proxy.conf.json\"",
+    "start": "npm run server:run",
     "lint:client": "ng lint",
     "lint:server": "tslint './server/**/*.ts' -c ./server/tslint.json --fix",
     "test:client": "ng test --watch false",
     "e2e:client": "ng e2e",
     "build": "ng build --prod  --aot --output-path=dist/client && npm run server:build",
-    "server:run": "nodemon",
+    "server:run": "npm run server:build && nodemon",
     "server:build": "tsc -p ./server",
     "postinstall": "npm run build"
   },
@@ -61,7 +61,7 @@
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^7.4.3",
-    "mongoose": "^5.2.9",
+    "mongoose": "^5.2.13",
     "morgan": "^1.9.0",
     "ngrx-store-freeze": "^0.2.0",
     "normalize.css": "^5.0.0",
@@ -85,6 +85,8 @@
     "@angular/compiler-cli": "^6.1.1",
     "@angular/language-service": "^5.2.11",
     "@types/jasmine": "^2.8.8",
+    "@types/mongodb": "^3.1.7",
+    "@types/mongoose": "^5.2.12",
     "@types/node": "^10.5.7",
     "codelyzer": "^4.4.3",
     "concurrently": "^3.5.0",
